@@ -53,7 +53,7 @@
     If you are using a git version of the source you need to generate the
     configuration files first:
 
-        $ sh ./autogen.sh
+        $ ./autogen.sh
 
     For generic installation instructions please see the INSTALL file
     (generated by autogen.sh).
